<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/opcReiniciarPartida"
        android:icon="@drawable/restart"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/txtReiniciarPartida" />
    <item
        android:id="@+id/opcGuardarPartida"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/txtOpcionGuardar" />
    <item
        android:id="@+id/opcRecuperarPartida"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="15"
        android:showAsAction="ifRoom|withText"
        android:title="@string/txtOpcionRecuperar" />
    <item
        android:id="@+id/opcMejoresResultados"
        android:orderInCategory="20"
        android:title="@string/txtOpcionMejoresResultados" />
    <item
        android:id="@+id/opcBorrarResultados"
        android:orderInCategory="20"
        android:title="@string/txtOpcionBorrarResultados" />
    <item
        android:id="@+id/opcAjustes"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/preferencesText" />
    <item
        android:id="@+id/opcAcercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/aboutText" />

</menu>